--- a/examples/SecondSpectrum Exploring.ipynb
+++ b/examples/SecondSpectrum Exploring.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-01T20:13:12.415506Z",
+     "start_time": "2023-04-01T20:13:12.075969Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd \n",
@@ -17,11 +22,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-01T20:14:07.422136Z",
+     "start_time": "2023-04-01T20:13:56.609121Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "data_directory = '../data/SecondSpectrum'\n",
-    "file = 'g2312183_SecondSpectrum_tracking-produced.jsonl'\n",
+    "data_directory = '../data/tracking'\n",
+    "file = 'g2312201_SecondSpectrum_tracking-produced.jsonl'\n",
     "match_tracking_path = os.path.join(data_directory, file)\n",
     "\n",
     "# < 20s\n",
@@ -31,7 +41,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-01T20:14:14.206774Z",
+     "start_time": "2023-04-01T20:14:14.161749Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -71,10 +86,10 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>1670162509680</td>\n",
-       "      <td>[{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...</td>\n",
-       "      <td>[{'playerId': '28297289-4265-4a74-bcbc-b1e4320...</td>\n",
-       "      <td>{'xyz': [-0.28, 0.09, 0.29], 'speed': 9.29}</td>\n",
+       "      <td>1674387294150</td>\n",
+       "      <td>[{'playerId': '02780bab-8db4-4310-ad80-308ae2f...</td>\n",
+       "      <td>[{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...</td>\n",
+       "      <td>{'xyz': [-0.58, 0.08, 0.34], 'speed': 8.97}</td>\n",
        "      <td>False</td>\n",
        "      <td>home</td>\n",
        "    </tr>\n",
@@ -83,48 +98,48 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.04</td>\n",
-       "      <td>1670162509720</td>\n",
-       "      <td>[{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...</td>\n",
-       "      <td>[{'playerId': '28297289-4265-4a74-bcbc-b1e4320...</td>\n",
-       "      <td>{'xyz': [-0.7000000000000001, 0.21, 0.29], 'sp...</td>\n",
+       "      <td>1674387294190</td>\n",
+       "      <td>[{'playerId': '02780bab-8db4-4310-ad80-308ae2f...</td>\n",
+       "      <td>[{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...</td>\n",
+       "      <td>{'xyz': [-0.89, 0.09, 0.35000000000000003], 's...</td>\n",
        "      <td>True</td>\n",
-       "      <td>home</td>\n",
+       "      <td>away</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.08</td>\n",
-       "      <td>1670162509760</td>\n",
-       "      <td>[{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...</td>\n",
-       "      <td>[{'playerId': '28297289-4265-4a74-bcbc-b1e4320...</td>\n",
-       "      <td>{'xyz': [-1.1, 0.32, 0.29], 'speed': 8.97}</td>\n",
+       "      <td>1674387294230</td>\n",
+       "      <td>[{'playerId': '02780bab-8db4-4310-ad80-308ae2f...</td>\n",
+       "      <td>[{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...</td>\n",
+       "      <td>{'xyz': [-1.2, 0.09, 0.36], 'speed': 9.11}</td>\n",
        "      <td>True</td>\n",
-       "      <td>home</td>\n",
+       "      <td>away</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0.12</td>\n",
-       "      <td>1670162509800</td>\n",
-       "      <td>[{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...</td>\n",
-       "      <td>[{'playerId': '28297289-4265-4a74-bcbc-b1e4320...</td>\n",
-       "      <td>{'xyz': [-1.5, 0.44, 0.29], 'speed': 8.81}</td>\n",
+       "      <td>1674387294270</td>\n",
+       "      <td>[{'playerId': '02780bab-8db4-4310-ad80-308ae2f...</td>\n",
+       "      <td>[{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...</td>\n",
+       "      <td>{'xyz': [-1.52, 0.1, 0.37], 'speed': 9.15}</td>\n",
        "      <td>True</td>\n",
-       "      <td>home</td>\n",
+       "      <td>away</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>0.16</td>\n",
-       "      <td>1670162509840</td>\n",
-       "      <td>[{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...</td>\n",
-       "      <td>[{'playerId': '28297289-4265-4a74-bcbc-b1e4320...</td>\n",
-       "      <td>{'xyz': [-1.9100000000000001, 0.52, 0.29], 'sp...</td>\n",
+       "      <td>1674387294310</td>\n",
+       "      <td>[{'playerId': '02780bab-8db4-4310-ad80-308ae2f...</td>\n",
+       "      <td>[{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...</td>\n",
+       "      <td>{'xyz': [-1.85, 0.11, 0.37], 'speed': 9.15}</td>\n",
        "      <td>True</td>\n",
-       "      <td>home</td>\n",
+       "      <td>away</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -132,32 +147,32 @@
       ],
       "text/plain": [
        "   period  frameIdx  gameClock      wallClock  \\\n",
-       "0       1         0       0.00  1670162509680   \n",
-       "1       1         1       0.04  1670162509720   \n",
-       "2       1         2       0.08  1670162509760   \n",
-       "3       1         3       0.12  1670162509800   \n",
-       "4       1         4       0.16  1670162509840   \n",
+       "0       1         0       0.00  1674387294150   \n",
+       "1       1         1       0.04  1674387294190   \n",
+       "2       1         2       0.08  1674387294230   \n",
+       "3       1         3       0.12  1674387294270   \n",
+       "4       1         4       0.16  1674387294310   \n",
        "\n",
        "                                         homePlayers  \\\n",
-       "0  [{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...   \n",
-       "1  [{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...   \n",
-       "2  [{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...   \n",
-       "3  [{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...   \n",
-       "4  [{'playerId': '0746befc-a701-4b33-8faf-b3ccccc...   \n",
+       "0  [{'playerId': '02780bab-8db4-4310-ad80-308ae2f...   \n",
+       "1  [{'playerId': '02780bab-8db4-4310-ad80-308ae2f...   \n",
+       "2  [{'playerId': '02780bab-8db4-4310-ad80-308ae2f...   \n",
+       "3  [{'playerId': '02780bab-8db4-4310-ad80-308ae2f...   \n",
+       "4  [{'playerId': '02780bab-8db4-4310-ad80-308ae2f...   \n",
        "\n",
        "                                         awayPlayers  \\\n",
-       "0  [{'playerId': '28297289-4265-4a74-bcbc-b1e4320...   \n",
-       "1  [{'playerId': '28297289-4265-4a74-bcbc-b1e4320...   \n",
-       "2  [{'playerId': '28297289-4265-4a74-bcbc-b1e4320...   \n",
-       "3  [{'playerId': '28297289-4265-4a74-bcbc-b1e4320...   \n",
-       "4  [{'playerId': '28297289-4265-4a74-bcbc-b1e4320...   \n",
+       "0  [{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...   \n",
+       "1  [{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...   \n",
+       "2  [{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...   \n",
+       "3  [{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...   \n",
+       "4  [{'playerId': '25357429-779e-43bb-aa85-8c2ef9c...   \n",
        "\n",
        "                                                ball   live lastTouch  \n",
-       "0        {'xyz': [-0.28, 0.09, 0.29], 'speed': 9.29}  False      home  \n",
-       "1  {'xyz': [-0.7000000000000001, 0.21, 0.29], 'sp...   True      home  \n",
-       "2         {'xyz': [-1.1, 0.32, 0.29], 'speed': 8.97}   True      home  \n",
-       "3         {'xyz': [-1.5, 0.44, 0.29], 'speed': 8.81}   True      home  \n",
-       "4  {'xyz': [-1.9100000000000001, 0.52, 0.29], 'sp...   True      home  "
+       "0        {'xyz': [-0.58, 0.08, 0.34], 'speed': 8.97}  False      home  \n",
+       "1  {'xyz': [-0.89, 0.09, 0.35000000000000003], 's...   True      away  \n",
+       "2         {'xyz': [-1.2, 0.09, 0.36], 'speed': 9.11}   True      away  \n",
+       "3         {'xyz': [-1.52, 0.1, 0.37], 'speed': 9.15}   True      away  \n",
+       "4        {'xyz': [-1.85, 0.11, 0.37], 'speed': 9.15}   True      away  "
       ]
      },
      "execution_count": 4,
@@ -172,7 +187,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-01T20:14:45.893586Z",
+     "start_time": "2023-04-01T20:14:44.719893Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -211,61 +231,61 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1670162509680</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1674387294150</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>246319</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>[16.93, 16.79, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1674387294150</td>\n",
        "      <td>False</td>\n",
        "      <td>home</td>\n",
        "      <td>192194</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-10.1, 1.6800000000000002, 0.0]</td>\n",
+       "      <td>[13.61, 0.11, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1670162509680</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1674387294150</td>\n",
        "      <td>False</td>\n",
        "      <td>home</td>\n",
        "      <td>174349</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-0.15, -27.56, 0.0]</td>\n",
+       "      <td>[3.04, 17.82, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1670162509680</td>\n",
-       "      <td>False</td>\n",
-       "      <td>home</td>\n",
-       "      <td>243637</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-0.28, 20.76, 0.0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1670162509680</td>\n",
+       "      <td>1674387294150</td>\n",
        "      <td>False</td>\n",
        "      <td>home</td>\n",
        "      <td>96385</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-4.08, 9.55, 0.0]</td>\n",
+       "      <td>[6.94, -8.83, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1670162509680</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1674387294150</td>\n",
        "      <td>False</td>\n",
        "      <td>home</td>\n",
        "      <td>459038</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-4.85, -11.14, 0.0]</td>\n",
+       "      <td>[5.21, 9.58, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -280,98 +300,98 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143055</th>\n",
+       "      <th>144074</th>\n",
        "      <td>2</td>\n",
-       "      <td>143055</td>\n",
-       "      <td>2893.8</td>\n",
-       "      <td>1670169209400</td>\n",
+       "      <td>144074</td>\n",
+       "      <td>2882.04</td>\n",
+       "      <td>1674394107470</td>\n",
        "      <td>False</td>\n",
        "      <td>away</td>\n",
-       "      <td>463306</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>[-40.54, -2.76, 0.0]</td>\n",
+       "      <td>165677</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>[-9.2, 14.65, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143055</th>\n",
+       "      <th>144074</th>\n",
        "      <td>2</td>\n",
-       "      <td>143055</td>\n",
-       "      <td>2893.8</td>\n",
-       "      <td>1670169209400</td>\n",
+       "      <td>144074</td>\n",
+       "      <td>2882.04</td>\n",
+       "      <td>1674394107470</td>\n",
        "      <td>False</td>\n",
        "      <td>away</td>\n",
        "      <td>175128</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>[-37.53, 5.69, 0.0]</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>[2.95, 2.06, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143055</th>\n",
+       "      <th>144074</th>\n",
        "      <td>2</td>\n",
-       "      <td>143055</td>\n",
-       "      <td>2893.8</td>\n",
-       "      <td>1670169209400</td>\n",
+       "      <td>144074</td>\n",
+       "      <td>2882.04</td>\n",
+       "      <td>1674394107470</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>447080</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>[-11.49, 7.74, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144074</th>\n",
+       "      <td>2</td>\n",
+       "      <td>144074</td>\n",
+       "      <td>2882.04</td>\n",
+       "      <td>1674394107470</td>\n",
        "      <td>False</td>\n",
        "      <td>away</td>\n",
        "      <td>96535</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>[-11.47, -29.41, 0.0]</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>[-8.57, 21.25, 0.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>143055</th>\n",
+       "      <th>144074</th>\n",
        "      <td>2</td>\n",
-       "      <td>143055</td>\n",
-       "      <td>2893.8</td>\n",
-       "      <td>1670169209400</td>\n",
+       "      <td>144074</td>\n",
+       "      <td>2882.04</td>\n",
+       "      <td>1674394107470</td>\n",
        "      <td>False</td>\n",
        "      <td>away</td>\n",
-       "      <td>434287</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>[-3.3, -5.7, 0.0]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143055</th>\n",
-       "      <td>2</td>\n",
-       "      <td>143055</td>\n",
-       "      <td>2893.8</td>\n",
-       "      <td>1670169209400</td>\n",
-       "      <td>False</td>\n",
-       "      <td>away</td>\n",
-       "      <td>472359</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>[-4.12, -17.21, 0.0]</td>\n",
+       "      <td>186043</td>\n",
+       "      <td>5.21</td>\n",
+       "      <td>[5.37, 28.37, 0.0]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1573616 rows × 9 columns</p>\n",
+       "<p>1584825 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        period  frameIdx  gameClock      wallClock   live lastTouch  optaId  \\\n",
-       "0            1         0        0.0  1670162509680  False      home  192194   \n",
-       "0            1         0        0.0  1670162509680  False      home  174349   \n",
-       "0            1         0        0.0  1670162509680  False      home  243637   \n",
-       "0            1         0        0.0  1670162509680  False      home   96385   \n",
-       "0            1         0        0.0  1670162509680  False      home  459038   \n",
+       "0            1         0       0.00  1674387294150  False      home  246319   \n",
+       "0            1         0       0.00  1674387294150  False      home  192194   \n",
+       "0            1         0       0.00  1674387294150  False      home  174349   \n",
+       "0            1         0       0.00  1674387294150  False      home   96385   \n",
+       "0            1         0       0.00  1674387294150  False      home  459038   \n",
        "...        ...       ...        ...            ...    ...       ...     ...   \n",
-       "143055       2    143055     2893.8  1670169209400  False      away  463306   \n",
-       "143055       2    143055     2893.8  1670169209400  False      away  175128   \n",
-       "143055       2    143055     2893.8  1670169209400  False      away   96535   \n",
-       "143055       2    143055     2893.8  1670169209400  False      away  434287   \n",
-       "143055       2    143055     2893.8  1670169209400  False      away  472359   \n",
+       "144074       2    144074    2882.04  1674394107470  False      away  165677   \n",
+       "144074       2    144074    2882.04  1674394107470  False      away  175128   \n",
+       "144074       2    144074    2882.04  1674394107470  False      away  447080   \n",
+       "144074       2    144074    2882.04  1674394107470  False      away   96535   \n",
+       "144074       2    144074    2882.04  1674394107470  False      away  186043   \n",
        "\n",
-       "        speed                               xyz  \n",
-       "0        0.00  [-10.1, 1.6800000000000002, 0.0]  \n",
-       "0        0.00              [-0.15, -27.56, 0.0]  \n",
-       "0        0.00               [-0.28, 20.76, 0.0]  \n",
-       "0        0.00                [-4.08, 9.55, 0.0]  \n",
-       "0        0.00              [-4.85, -11.14, 0.0]  \n",
-       "...       ...                               ...  \n",
-       "143055   0.83              [-40.54, -2.76, 0.0]  \n",
-       "143055   1.05               [-37.53, 5.69, 0.0]  \n",
-       "143055   1.49             [-11.47, -29.41, 0.0]  \n",
-       "143055   0.94                 [-3.3, -5.7, 0.0]  \n",
-       "143055   0.35              [-4.12, -17.21, 0.0]  \n",
+       "        speed                  xyz  \n",
+       "0        0.00  [16.93, 16.79, 0.0]  \n",
+       "0        0.00   [13.61, 0.11, 0.0]  \n",
+       "0        0.00   [3.04, 17.82, 0.0]  \n",
+       "0        0.00   [6.94, -8.83, 0.0]  \n",
+       "0        0.00    [5.21, 9.58, 0.0]  \n",
+       "...       ...                  ...  \n",
+       "144074   0.77   [-9.2, 14.65, 0.0]  \n",
+       "144074   0.18    [2.95, 2.06, 0.0]  \n",
+       "144074   1.08  [-11.49, 7.74, 0.0]  \n",
+       "144074   2.00  [-8.57, 21.25, 0.0]  \n",
+       "144074   5.21   [5.37, 28.37, 0.0]  \n",
        "\n",
-       "[1573616 rows x 9 columns]"
+       "[1584825 rows x 9 columns]"
       ]
      },
      "execution_count": 5,
@@ -384,13 +404,20 @@
     "HomeTracking = TeamTracking(df_unstructured_tracking=df_unstructured_tracking)\n",
     "HomeTracking.df_tracking"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mancity_env",
    "language": "python",
-   "name": "python3"
+   "name": "mancity_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,9 +429,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
