Calcul du cout metabolic

--- a/examples/SecondSpectrum Exploring.ipynb
+++ b/examples/SecondSpectrum Exploring.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
     "import os\n",
     "import sys\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
     "\n",
     "sys.path.insert(0, '../')\n",
     "from scripts.tracking import TeamTracking "
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,13 +161,24 @@
        "4  {'xyz': [-1.9100000000000001, 0.52, 0.29], 'sp...   True      home  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_unstructured_tracking.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Traitement de 1,5M de lignes en < 3s\n",
+    "HomeTracking = TeamTracking(df_unstructured_tracking=df_unstructured_tracking)\n",
+    "df_tracking_head = HomeTracking.df_tracking"
    ]
   },
   {
@@ -203,7 +215,9 @@
        "      <th>lastTouch</th>\n",
        "      <th>optaId</th>\n",
        "      <th>speed</th>\n",
-       "      <th>xyz</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>acceleration</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -217,7 +231,9 @@
        "      <td>home</td>\n",
        "      <td>192194</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-10.1, 1.6800000000000002, 0.0]</td>\n",
+       "      <td>-10.10</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -229,7 +245,9 @@
        "      <td>home</td>\n",
        "      <td>174349</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-0.15, -27.56, 0.0]</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>-27.56</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -241,7 +259,9 @@
        "      <td>home</td>\n",
        "      <td>243637</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-0.28, 20.76, 0.0]</td>\n",
+       "      <td>-0.28</td>\n",
+       "      <td>20.76</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -253,7 +273,9 @@
        "      <td>home</td>\n",
        "      <td>96385</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-4.08, 9.55, 0.0]</td>\n",
+       "      <td>-4.08</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -265,10 +287,14 @@
        "      <td>home</td>\n",
        "      <td>459038</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>[-4.85, -11.14, 0.0]</td>\n",
+       "      <td>-4.85</td>\n",
+       "      <td>-11.14</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -289,7 +315,9 @@
        "      <td>away</td>\n",
        "      <td>463306</td>\n",
        "      <td>0.83</td>\n",
-       "      <td>[-40.54, -2.76, 0.0]</td>\n",
+       "      <td>-40.54</td>\n",
+       "      <td>-2.76</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143055</th>\n",
@@ -301,7 +329,9 @@
        "      <td>away</td>\n",
        "      <td>175128</td>\n",
        "      <td>1.05</td>\n",
-       "      <td>[-37.53, 5.69, 0.0]</td>\n",
+       "      <td>-37.53</td>\n",
+       "      <td>5.69</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143055</th>\n",
@@ -313,7 +343,9 @@
        "      <td>away</td>\n",
        "      <td>96535</td>\n",
        "      <td>1.49</td>\n",
-       "      <td>[-11.47, -29.41, 0.0]</td>\n",
+       "      <td>-11.47</td>\n",
+       "      <td>-29.41</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143055</th>\n",
@@ -325,7 +357,9 @@
        "      <td>away</td>\n",
        "      <td>434287</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>[-3.3, -5.7, 0.0]</td>\n",
+       "      <td>-3.30</td>\n",
+       "      <td>-5.70</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143055</th>\n",
@@ -337,11 +371,13 @@
        "      <td>away</td>\n",
        "      <td>472359</td>\n",
        "      <td>0.35</td>\n",
-       "      <td>[-4.12, -17.21, 0.0]</td>\n",
+       "      <td>-4.12</td>\n",
+       "      <td>-17.21</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1573616 rows × 9 columns</p>\n",
+       "<p>1573616 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -358,20 +394,20 @@
        "143055       2    143055     2893.8  1670169209400  False      away  434287   \n",
        "143055       2    143055     2893.8  1670169209400  False      away  472359   \n",
        "\n",
-       "        speed                               xyz  \n",
-       "0        0.00  [-10.1, 1.6800000000000002, 0.0]  \n",
-       "0        0.00              [-0.15, -27.56, 0.0]  \n",
-       "0        0.00               [-0.28, 20.76, 0.0]  \n",
-       "0        0.00                [-4.08, 9.55, 0.0]  \n",
-       "0        0.00              [-4.85, -11.14, 0.0]  \n",
-       "...       ...                               ...  \n",
-       "143055   0.83              [-40.54, -2.76, 0.0]  \n",
-       "143055   1.05               [-37.53, 5.69, 0.0]  \n",
-       "143055   1.49             [-11.47, -29.41, 0.0]  \n",
-       "143055   0.94                 [-3.3, -5.7, 0.0]  \n",
-       "143055   0.35              [-4.12, -17.21, 0.0]  \n",
+       "        speed      x      y  acceleration  \n",
+       "0        0.00 -10.10   1.68           NaN  \n",
+       "0        0.00  -0.15 -27.56           NaN  \n",
+       "0        0.00  -0.28  20.76           NaN  \n",
+       "0        0.00  -4.08   9.55           NaN  \n",
+       "0        0.00  -4.85 -11.14           NaN  \n",
+       "...       ...    ...    ...           ...  \n",
+       "143055   0.83 -40.54  -2.76           0.0  \n",
+       "143055   1.05 -37.53   5.69           0.0  \n",
+       "143055   1.49 -11.47 -29.41           0.0  \n",
+       "143055   0.94  -3.30  -5.70           0.0  \n",
+       "143055   0.35  -4.12 -17.21           0.0  \n",
        "\n",
-       "[1573616 rows x 9 columns]"
+       "[1573616 rows x 11 columns]"
       ]
      },
      "execution_count": 5,
@@ -380,9 +416,257 @@
     }
    ],
    "source": [
-    "# Traitement de 1,5M de lignes en < 2s\n",
-    "HomeTracking = TeamTracking(df_unstructured_tracking=df_unstructured_tracking)\n",
-    "HomeTracking.df_tracking"
+    "HomeTracking.calculate_acceleration()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>period</th>\n",
+       "      <th>frameIdx</th>\n",
+       "      <th>gameClock</th>\n",
+       "      <th>wallClock</th>\n",
+       "      <th>live</th>\n",
+       "      <th>lastTouch</th>\n",
+       "      <th>optaId</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>metabolic_cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1670162509680</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>192194</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-10.10</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1670162509680</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>174349</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>-27.56</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1670162509680</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>243637</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.28</td>\n",
+       "      <td>20.76</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1670162509680</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>96385</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-4.08</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1670162509680</td>\n",
+       "      <td>False</td>\n",
+       "      <td>home</td>\n",
+       "      <td>459038</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-4.85</td>\n",
+       "      <td>-11.14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>143055</td>\n",
+       "      <td>2893.8</td>\n",
+       "      <td>1670169209400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>463306</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>-40.54</td>\n",
+       "      <td>-2.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.601556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>143055</td>\n",
+       "      <td>2893.8</td>\n",
+       "      <td>1670169209400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>175128</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>-37.53</td>\n",
+       "      <td>5.69</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.601556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>143055</td>\n",
+       "      <td>2893.8</td>\n",
+       "      <td>1670169209400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>96535</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>-11.47</td>\n",
+       "      <td>-29.41</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.601556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>143055</td>\n",
+       "      <td>2893.8</td>\n",
+       "      <td>1670169209400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>434287</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>-3.30</td>\n",
+       "      <td>-5.70</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.601556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143055</th>\n",
+       "      <td>2</td>\n",
+       "      <td>143055</td>\n",
+       "      <td>2893.8</td>\n",
+       "      <td>1670169209400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>away</td>\n",
+       "      <td>472359</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>-4.12</td>\n",
+       "      <td>-17.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.601556</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1573616 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        period  frameIdx  gameClock      wallClock   live lastTouch  optaId  \\\n",
+       "0            1         0        0.0  1670162509680  False      home  192194   \n",
+       "0            1         0        0.0  1670162509680  False      home  174349   \n",
+       "0            1         0        0.0  1670162509680  False      home  243637   \n",
+       "0            1         0        0.0  1670162509680  False      home   96385   \n",
+       "0            1         0        0.0  1670162509680  False      home  459038   \n",
+       "...        ...       ...        ...            ...    ...       ...     ...   \n",
+       "143055       2    143055     2893.8  1670169209400  False      away  463306   \n",
+       "143055       2    143055     2893.8  1670169209400  False      away  175128   \n",
+       "143055       2    143055     2893.8  1670169209400  False      away   96535   \n",
+       "143055       2    143055     2893.8  1670169209400  False      away  434287   \n",
+       "143055       2    143055     2893.8  1670169209400  False      away  472359   \n",
+       "\n",
+       "        speed      x      y  acceleration  metabolic_cost  \n",
+       "0        0.00 -10.10   1.68           NaN             NaN  \n",
+       "0        0.00  -0.15 -27.56           NaN             NaN  \n",
+       "0        0.00  -0.28  20.76           NaN             NaN  \n",
+       "0        0.00  -4.08   9.55           NaN             NaN  \n",
+       "0        0.00  -4.85 -11.14           NaN             NaN  \n",
+       "...       ...    ...    ...           ...             ...  \n",
+       "143055   0.83 -40.54  -2.76           0.0        3.601556  \n",
+       "143055   1.05 -37.53   5.69           0.0        3.601556  \n",
+       "143055   1.49 -11.47 -29.41           0.0        3.601556  \n",
+       "143055   0.94  -3.30  -5.70           0.0        3.601556  \n",
+       "143055   0.35  -4.12 -17.21           0.0        3.601556  \n",
+       "\n",
+       "[1573616 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HomeTracking.calculate_metabolic_cost()"
    ]
   }
  ],
