--- a/examples/StatsBoom Exploring.ipynb
+++ b/examples/StatsBoom Exploring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "<Axes: xlabel='cluster_period'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "<Axes: xlabel='cluster_period'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,16 +143,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>player_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>4637.0</td>\n",
+       "      <td>Ellie Roebuck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3361</th>\n",
+       "      <td>4649.0</td>\n",
+       "      <td>Esme Beth Morgan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531</th>\n",
+       "      <td>4651.0</td>\n",
+       "      <td>Demi Stokes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>5078.0</td>\n",
+       "      <td>Alanna Stephanie Kennedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2761</th>\n",
+       "      <td>6818.0</td>\n",
+       "      <td>Hayley Emma Raso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>10163.0</td>\n",
+       "      <td>Leila Ouahabi El Ouahabi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>10185.0</td>\n",
+       "      <td>Stephanie Houghton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>10252.0</td>\n",
+       "      <td>Alex Greenwood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>15555.0</td>\n",
+       "      <td>Lauren Hemp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>15570.0</td>\n",
+       "      <td>Chloe Kelly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>19416.0</td>\n",
+       "      <td>Laura Coombs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>25554.0</td>\n",
+       "      <td>Khadija Monifa Shaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>25632.0</td>\n",
+       "      <td>Yui Hasegawa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>32210.0</td>\n",
+       "      <td>Laia Aleixandri López</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3538</th>\n",
+       "      <td>35693.0</td>\n",
+       "      <td>Mary Boio Fowler</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3243</th>\n",
+       "      <td>41812.0</td>\n",
+       "      <td>Ruby Mace</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3322</th>\n",
+       "      <td>49938.0</td>\n",
+       "      <td>Deyna Cristina Castellanos Naujenis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>62666.0</td>\n",
+       "      <td>Ingrid Filippa Angeldal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3476</th>\n",
+       "      <td>191851.0</td>\n",
+       "      <td>Julie Blakstad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1755</th>\n",
+       "      <td>221888.0</td>\n",
+       "      <td>Kerstin Yasmijn Casparij</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "21"
+       "      player_id                          player_name\n",
+       "63       4637.0                        Ellie Roebuck\n",
+       "3361     4649.0                     Esme Beth Morgan\n",
+       "3531     4651.0                          Demi Stokes\n",
+       "66       5078.0             Alanna Stephanie Kennedy\n",
+       "2761     6818.0                     Hayley Emma Raso\n",
+       "29      10163.0             Leila Ouahabi El Ouahabi\n",
+       "79      10185.0                   Stephanie Houghton\n",
+       "69      10252.0                       Alex Greenwood\n",
+       "18      15555.0                          Lauren Hemp\n",
+       "26      15570.0                          Chloe Kelly\n",
+       "124     19416.0                         Laura Coombs\n",
+       "21      25554.0                  Khadija Monifa Shaw\n",
+       "30      25632.0                         Yui Hasegawa\n",
+       "33      32210.0                Laia Aleixandri López\n",
+       "3538    35693.0                     Mary Boio Fowler\n",
+       "3243    41812.0                            Ruby Mace\n",
+       "3322    49938.0  Deyna Cristina Castellanos Naujenis\n",
+       "15      62666.0              Ingrid Filippa Angeldal\n",
+       "3476   191851.0                       Julie Blakstad\n",
+       "1755   221888.0             Kerstin Yasmijn Casparij\n",
+       "0           NaN                                  NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +318,7 @@
     "\n",
     "# Sélection des joueuses de ManCity\n",
     "mask = df_events.team_id == 746\n",
-    "len(df_events[mask][['player_id', 'player_name']].drop_duplicates().sort_values(by = 'player_id'))"
+    "df_events[mask][['player_id', 'player_name']].drop_duplicates().sort_values(by = 'player_id')"
    ]
   }
  ],
